--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@ body {
   flex-direction: column;
   padding: 0 200px;
 }
-
 .header-logo {
   display: flex;
   align-items: center;
@@ -113,11 +112,98 @@ body {
 
 .infogaltext {
   text-align: center;
-  margin: 10px 0;
+  padding: 10px 0;
   color: #4b5563;
 }
 
 .qoutecontainer {
   background-color: #E5E7EB;
-  height: 200px;
+  font-size: 36px;
+  color: #1F2937;
+  padding: 50px 0px 70px;
+}
+
+.qoutemain{
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.qoutebody {
+  font-style: italic;
+  font-weight: 300;
+}
+
+.qouteperson {
+  font-weight: 700;
+  text-align: right;
+  padding-top: 20px;
+}
+
+.calltoaction{
+  padding: 100px 400px;
+  color: white;
+}
+
+.signupbox {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  padding: 40px 120px;
+  background-color: #3882F6;
+  border-radius: 15px;
+  min-width: 800px;
+}
+
+.signuptitle {
+  font-weight: bold;
+}
+
+.signupbutt {
+  border-radius: 15px;
+  background-color: #3882F6;
+  border: 2px solid white;
+  color: white;
+  text-align: center;
+  font-size: 18px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.signupbutt span {
+  cursor: pointer;
+  display:inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.signupbutt:hover span{
+  padding-right: 25px;
+}
+
+.signupbutt span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.signupbutt:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+a,signupbutt {
+  text-decoration: none;
+  color: white;
+}
+
+.footer {
+  background-color: #1F2937;
+  color: white;
+  text-align: center;
+  padding: 20px;
 }
